<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/pocetna"
        android:icon="@drawable/home"
        android:title="@string/pocetna"/>

    <item android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/pretraga"/>

    <item android:id="@+id/korpa"
        android:icon="@drawable/bag"
        android:title="@string/korpa"/>

    <item android:id="@+id/user"
        android:icon="@drawable/user"
        android:title="@string/profil"/>
</menu>